--- a/responsive-news-site/webroot/css/default.css
+++ b/responsive-news-site/webroot/css/default.css
@@ -1,5 +1,4 @@
 html {
-  max-width: 375px;
   font-size: 16px;
 }
 
