--- a/responsive-news-site/webroot/css/happenning-now.css
+++ b/responsive-news-site/webroot/css/happenning-now.css
@@ -6,7 +6,7 @@
   padding-inline-start: 1rem;
   padding-inline-end: 1rem;
   color: #fff;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid lightgray;
   padding-block-end: var(--base-paddign);
 }
 
