--- a/responsive-news-site/webroot/css/trending.css
+++ b/responsive-news-site/webroot/css/trending.css
@@ -52,7 +52,7 @@
 }
 
 .pattern {
-  height: 200px;
-  width: 343px;
+  height: 400px;
+  width: 100%;
   border-radius: 5px 5px 0 0;
 }
